--- a/package.json
+++ b/package.json
@@ -24,14 +24,16 @@
 		"@heavy-duty/anchor": "^0.24.2",
 		"@materia-ui/ngx-monaco-editor": "^6.0.0",
 		"@nestjs/axios": "^0.0.7",
-		"@nestjs/common": "^8.0.0",
-		"@nestjs/core": "^8.0.0",
+		"@nestjs/common": "^8.4.5",
+		"@nestjs/core": "^8.4.5",
 		"@nestjs/platform-express": "^8.0.0",
 		"@nestjs/platform-ws": "^8.4.0",
 		"@nestjs/websockets": "^8.4.0",
 		"@ngrx/component": "13.0.2",
 		"@ngrx/component-store": "13.0.2",
 		"@nrwl/angular": "14.1.5",
+		"@octokit/rest": "^18.12.0",
+		"@solana/buffer-layout": "^4.0.0",
 		"@solana/spl-token": "^0.2.0",
 		"@solana/wallet-adapter-base": "0.9.5",
 		"@solana/wallet-adapter-wallets": "0.15.5",
@@ -42,8 +44,10 @@
 		"handlebars": "^4.7.7",
 		"immutable": "^4.0.0",
 		"jszip": "^3.7.1",
+		"log-symbols": "^5.1.0",
 		"monaco-editor": "^0.32.1",
 		"probot": "^12.2.2",
+		"nest-commander": "^2.5.0",
 		"qs": "^6.10.3",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "7.5.2",
