--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"immutable": "^4.0.0",
 		"jszip": "^3.7.1",
 		"monaco-editor": "^0.32.1",
+		"probot": "^12.2.2",
 		"qs": "^6.10.3",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "7.5.2",
@@ -98,8 +99,10 @@
 		"postcss-preset-env": "^6.7.0",
 		"postcss-url": "^10.1.1",
 		"prettier": "2.5.1",
+		"smee-client": "^1.2.3",
 		"tailwindcss": "^2.2.17",
 		"ts-jest": "27.1.4",
+		"ts-node": "9.1.1",
 		"typescript": "4.6.3"
 	},
 	"husky": {
