--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"monaco-editor": "^0.32.1",
 		"nest-commander": "^2.5.0",
 		"probot": "^12.2.2",
+		"qrcode": "^1.5.0",
 		"qs": "^6.10.3",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "7.5.2",
@@ -86,6 +87,7 @@
 		"@types/jest": "27.4.1",
 		"@types/mocha": "^9.0.0",
 		"@types/node": "^14.18.1",
+		"@types/qrcode": "^1.4.2",
 		"@types/uuid": "^8.3.4",
 		"@typescript-eslint/eslint-plugin": "5.18.0",
 		"@typescript-eslint/parser": "5.18.0",
