feat(bulldozer): setup get instruction command

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,8 @@
 		"ngx-websocket",
 		"broadcaster",
 		"heavy-duty-ui",
-		"drill"
+		"drill",
+		"bulldozer"
 	],
 	"editor.defaultFormatter": "esbenp.prettier-vscode",
 	"editor.formatOnSave": true,
