feat: initial message when use CLI added

--- a/package.json
+++ b/package.json
@@ -39,15 +39,17 @@
 		"@solana/wallet-adapter-wallets": "0.15.5",
 		"@solana/web3.js": "^1.41.4",
 		"bs58": "^5.0.0",
+		"chalk": "^4.1.2",
 		"dotenv": "^16.0.1",
+		"figlet": "^1.5.2",
 		"file-saver": "^2.0.5",
 		"handlebars": "^4.7.7",
 		"immutable": "^4.0.0",
 		"jszip": "^3.7.1",
 		"log-symbols": "^5.1.0",
 		"monaco-editor": "^0.32.1",
-		"probot": "^12.2.2",
 		"nest-commander": "^2.5.0",
+		"probot": "^12.2.2",
 		"qs": "^6.10.3",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "7.5.2",
@@ -78,6 +80,7 @@
 		"@nrwl/node": "14.1.5",
 		"@nrwl/workspace": "14.1.5",
 		"@types/chai": "^4.2.21",
+		"@types/chalk": "^2.2.0",
 		"@types/file-saver": "^2.0.3",
 		"@types/jest": "27.4.1",
 		"@types/mocha": "^9.0.0",
