feat: get collection attribute command logic added

--- a/apps/bulldozer-cli/project.json
+++ b/apps/bulldozer-cli/project.json
@@ -109,6 +109,17 @@
 				"envFile": "apps/bulldozer-cli/.env"
 			}
 		},
+		"get-collection-attribute": {
+			"executor": "@nrwl/workspace:run-commands",
+			"options": {
+				"commands": [
+					"nx build bulldozer-cli",
+					"node dist/apps/bulldozer-cli/main.js get-collection-attribute {args.collectionAttributeId}"
+				],
+				"parallel": false,
+				"envFile": "apps/bulldozer-cli/.env"
+			}
+		},
 		"get-instruction": {
 			"executor": "@nrwl/workspace:run-commands",
 			"options": {
