--- a/apps/bulldozer-cli/project.json
+++ b/apps/bulldozer-cli/project.json
@@ -114,7 +114,7 @@
 			"options": {
 				"commands": [
 					"nx build bulldozer-cli",
-					"node dist/apps/bulldozer-cli/main.js generate-workspace {args.workspaceId}"
+					"node dist/apps/bulldozer-cli/main.js generate-workspace {args.workspaceId} {args.outDir}"
 				],
 				"parallel": false,
 				"envFile": "apps/bulldozer-cli/.env"
