--- a/package.json
+++ b/package.json
@@ -38,14 +38,19 @@
 		"@solana/wallet-adapter-base": "0.9.5",
 		"@solana/wallet-adapter-wallets": "0.15.5",
 		"@solana/web3.js": "^1.41.4",
+		"body-parser": "^1.20.0",
 		"bs58": "^5.0.0",
 		"case": "^1.6.3",
 		"chalk": "^4.1.2",
+		"child_process": "^1.0.2",
 		"dotenv": "^16.0.1",
+		"express": "^4.18.1",
 		"figlet": "^1.5.2",
 		"file-saver": "^2.0.5",
+		"fs": "^0.0.1-security",
 		"handlebars": "^4.7.7",
 		"immutable": "^4.0.0",
+		"js-yaml": "^4.1.0",
 		"jszip": "^3.7.1",
 		"log-symbols": "^5.1.0",
 		"monaco-editor": "^0.32.1",
@@ -85,6 +90,7 @@
 		"@types/chalk": "^2.2.0",
 		"@types/file-saver": "^2.0.3",
 		"@types/jest": "27.4.1",
+		"@types/js-yaml": "^4.0.5",
 		"@types/mocha": "^9.0.0",
 		"@types/node": "^14.18.1",
 		"@types/qrcode": "^1.4.2",
