chore(editor): add new scope

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,8 @@
 		"heavy-duty-ui",
 		"drill",
 		"bulldozer",
-		"blueprint"
+		"blueprint",
+		"crane"
 	],
 	"editor.defaultFormatter": "esbenp.prettier-vscode",
 	"editor.formatOnSave": true,
