feat(crane): improve wallet interaction

--- a/apps/crane-web-client/project.json
+++ b/apps/crane-web-client/project.json
@@ -17,7 +17,10 @@
 					"apps/crane-web-client/src/favicon.ico",
 					"apps/crane-web-client/src/assets"
 				],
-				"styles": ["apps/crane-web-client/src/styles.scss"],
+				"styles": [
+					"apps/crane-web-client/src/styles.scss",
+					"libs/wallet-adapter/ui/material/src/style.css"
+				],
 				"scripts": [],
 				"customWebpackConfig": {
 					"path": "apps/crane-web-client/webpack.config.js"
