--- a/nx.json
+++ b/nx.json
@@ -54,5 +54,8 @@
 		}
 	},
 	"defaultProject": "bulldozer-client",
-	"$schema": "./node_modules/nx/schemas/nx-schema.json"
+	"$schema": "./node_modules/nx/schemas/nx-schema.json",
+	"cli": {
+		"defaultCollection": "@nrwl/angular"
+	}
 }
