--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
 		"jest-preset-angular": "11.1.2",
 		"lint-staged": "^11.2.3",
 		"mocha": "^9.1.3",
-		"ng-packagr": "14.0.0",
+		"ng-packagr": "~14.0.0",
 		"nx": "14.2.0-rc.1",
 		"postcss": "^8.3.9",
 		"postcss-import": "14.1.0",
