--- a/package.json
+++ b/package.json
@@ -21,23 +21,23 @@
 		"@angular/platform-browser": "14.0.0",
 		"@angular/platform-browser-dynamic": "14.0.0",
 		"@angular/router": "14.0.0",
-		"@heavy-duty/anchor": "^0.24.2",
+		"@heavy-duty/anchor": "0.24.2",
 		"@materia-ui/ngx-monaco-editor": "^6.0.0",
-		"@nestjs/axios": "^0.0.8",
-		"@nestjs/common": "^8.4.6",
-		"@nestjs/core": "^8.4.6",
-		"@nestjs/platform-express": "^8.4.6",
-		"@nestjs/platform-ws": "^8.4.6",
-		"@nestjs/websockets": "^8.4.6",
+		"@nestjs/axios": "0.0.8",
+		"@nestjs/common": "8.4.6",
+		"@nestjs/core": "8.4.6",
+		"@nestjs/platform-express": "8.4.6",
+		"@nestjs/platform-ws": "8.4.6",
+		"@nestjs/websockets": "8.4.6",
 		"@ngrx/component": "13.2.0",
 		"@ngrx/component-store": "13.2.0",
 		"@nrwl/angular": "14.2.0-rc.1",
 		"@octokit/rest": "^18.12.0",
-		"@solana/buffer-layout": "^4.0.0",
-		"@solana/spl-token": "^0.2.0",
+		"@solana/buffer-layout": "4.0.0",
+		"@solana/spl-token": "0.2.0",
 		"@solana/wallet-adapter-base": "0.9.5",
 		"@solana/wallet-adapter-wallets": "0.15.5",
-		"@solana/web3.js": "^1.43.4",
+		"@solana/web3.js": "1.43.5",
 		"bs58": "^5.0.0",
 		"case": "^1.6.3",
 		"chalk": "^4.1.2",
