feat(wallet-adapter): use standalone for material ui

--- a/libs/wallet-adapter/ui/material/package.json
+++ b/libs/wallet-adapter/ui/material/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@heavy-duty/wallet-adapter-material",
-	"version": "0.3.0",
+	"version": "0.3.0-beta.0",
 	"publishConfig": {
 		"access": "public"
 	},
