--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
 		"@nestjs/platform-express": "8.4.6",
 		"@nestjs/platform-ws": "8.4.6",
 		"@nestjs/websockets": "8.4.6",
-		"@ngrx/component": "13.2.0",
-		"@ngrx/component-store": "13.2.0",
+		"@ngrx/component": "14.0.0-beta.0",
+		"@ngrx/component-store": "14.0.0-beta.0",
 		"@nrwl/angular": "14.2.0-rc.1",
 		"@octokit/rest": "^18.12.0",
 		"@solana/buffer-layout": "4.0.0",
@@ -113,7 +113,7 @@
 		"postcss-url": "10.1.3",
 		"prettier": "2.6.2",
 		"smee-client": "^1.2.3",
-		"tailwindcss": "^2.2.17",
+		"tailwindcss": "^3.0.24",
 		"ts-jest": "27.1.4",
 		"ts-node": "9.1.1",
 		"typescript": "4.7.3"
