--- a/package.json
+++ b/package.json
@@ -115,7 +115,7 @@
 		"smee-client": "^1.2.3",
 		"tailwindcss": "^3.0.24",
 		"ts-jest": "27.1.4",
-		"ts-node": "9.1.1",
+		"ts-node": "^10.8.1",
 		"typescript": "4.7.3"
 	},
 	"husky": {
