--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
 		"postcss-preset-env": "7.5.0",
 		"postcss-url": "10.1.3",
 		"prettier": "2.6.2",
+		"prettier-plugin-organize-attributes": "^0.0.5",
 		"smee-client": "^1.2.3",
 		"tailwindcss": "^3.0.24",
 		"ts-jest": "27.1.4",
