--- a/package.json
+++ b/package.json
@@ -96,12 +96,12 @@
 		"@types/node": "^14.18.1",
 		"@types/qrcode": "^1.4.2",
 		"@types/uuid": "^8.3.4",
-		"@typescript-eslint/eslint-plugin": "5.24.0",
-		"@typescript-eslint/parser": "5.24.0",
+		"@typescript-eslint/eslint-plugin": "^5.27.1",
+		"@typescript-eslint/parser": "^5.27.1",
 		"autoprefixer": "^10.3.7",
 		"chai": "^4.3.4",
 		"cypress": "^8.6.0",
-		"eslint": "8.15.0",
+		"eslint": "^8.17.0",
 		"eslint-config-prettier": "8.1.0",
 		"eslint-plugin-cypress": "^2.10.3",
 		"husky": "^7.0.2",
