--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
 		"@ngrx/component-store": "14.0.0-beta.0",
 		"@ngx-formly/core": "^5.12.4",
 		"@ngx-formly/material": "^5.12.4",
-		"@nrwl/angular": "14.2.0-rc.2",
+		"@nrwl/angular": "14.2.1",
 		"@octokit/rest": "^18.12.0",
 		"@solana/buffer-layout": "4.0.0",
 		"@solana/spl-token": "0.2.0",
@@ -77,15 +77,15 @@
 		"@danmt/nx-anchor": "0.0.6",
 		"@nestjs/schematics": "^8.0.11",
 		"@nestjs/testing": "^8.4.6",
-		"@nrwl/cli": "14.2.0-rc.2",
-		"@nrwl/cypress": "14.2.0-rc.2",
-		"@nrwl/eslint-plugin-nx": "14.2.0-rc.2",
-		"@nrwl/jest": "14.2.0-rc.2",
-		"@nrwl/js": "14.2.0-rc.2",
-		"@nrwl/linter": "14.2.0-rc.2",
-		"@nrwl/nest": "14.2.0-rc.2",
-		"@nrwl/node": "14.2.0-rc.2",
-		"@nrwl/workspace": "14.2.0-rc.2",
+		"@nrwl/cli": "14.2.1",
+		"@nrwl/cypress": "14.2.1",
+		"@nrwl/eslint-plugin-nx": "14.2.1",
+		"@nrwl/jest": "14.2.1",
+		"@nrwl/js": "14.2.1",
+		"@nrwl/linter": "14.2.1",
+		"@nrwl/nest": "14.2.1",
+		"@nrwl/node": "14.2.1",
+		"@nrwl/workspace": "14.2.1",
 		"@tailwindcss/line-clamp": "^0.4.0",
 		"@types/chai": "^4.2.21",
 		"@types/chalk": "^2.2.0",
@@ -110,7 +110,7 @@
 		"lint-staged": "^11.2.3",
 		"mocha": "^9.1.3",
 		"ng-packagr": "~14.0.0",
-		"nx": "14.2.0-rc.2",
+		"nx": "14.2.1",
 		"postcss": "^8.3.9",
 		"postcss-import": "14.1.0",
 		"postcss-preset-env": "7.5.0",
