--- a/apps/bulldozer-programs/Anchor.toml
+++ b/apps/bulldozer-programs/Anchor.toml
@@ -2,6 +2,7 @@
 seeds = true
 
 [programs.localnet]
+application_manager = "F9fx9GDHRJDqtS9bKA82Eq3KpQvbsywu6j9c2VyffhrJ"
 workspace_manager = "HqF7vRWkmy8cgp3DRH1qK9axyuQgUhqneHP4dqZ6nqdF"
 user_manager = "AoVeQTkP3k9NoNH2yQxCaRDJ53kdC6ARVc447eFBJwTV"
 bulldozer = "EYpJuu7FLtQAHXFY7vcCihRjAyBjb31HCGaJgo1c3fEo"
@@ -15,4 +16,4 @@ cluster = "localnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
-test = "ts-mocha -p ./tsconfig.json -t 1000000 tests/*.spec.ts --parallel"
+test = "ts-mocha -p ./tsconfig.json -t 1000000 tests/workspace.spec.ts --parallel"
