--- a/apps/bulldozer-programs/programs/gateway/Cargo.toml
+++ b/apps/bulldozer-programs/programs/gateway/Cargo.toml
@@ -23,3 +23,4 @@ anchor-lang = "0.24.2"
 user-manager = { path = "../user-manager", features = ["cpi"] }
 workspace-manager = { path = "../workspace-manager", features = ["cpi"] }
 application-manager = { path = "../application-manager", features = ["cpi"] }
+collection-manager = { path = "../collection-manager", features = ["cpi"] }
