--- a/apps/bulldozer-programs/Anchor.toml
+++ b/apps/bulldozer-programs/Anchor.toml
@@ -17,4 +17,4 @@ cluster = "localnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
-test = "ts-mocha -p ./tsconfig.json -t 1000000 tests/application.spec.ts --parallel"
+test = "ts-mocha -p ./tsconfig.json -t 1000000 tests/collection.spec.ts --parallel"
