--- a/apps/bulldozer-cli/project.json
+++ b/apps/bulldozer-cli/project.json
@@ -60,7 +60,7 @@
 			"options": {
 				"commands": [
 					"nx build bulldozer-cli",
-					"node dist/apps/bulldozer-cli/main.js deploy-workspace {args.workspaceId}"
+					"node dist/apps/bulldozer-cli/main.js deploy-workspace {args.workspaceId} {args.outDir}"
 				],
 				"parallel": false,
 				"envFile": "apps/bulldozer-cli/.env"
@@ -125,7 +125,8 @@
 			"executor": "@nrwl/workspace:run-commands",
 			"options": {
 				"commands": [
-					"nx build bulldozer-cli",
+					"rm -rf dist/apps/bulldozer-cli/",
+					"ncc build apps/bulldozer-cli/src/main.ts --license licenses.txt --minify --out dist/apps/bulldozer-cli",
 					"node dist/apps/bulldozer-cli/main.js get-workspace {args.workspaceId}"
 				],
 				"parallel": false,
