--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"bs58": "^5.0.0",
 		"case": "^1.6.3",
 		"chalk": "^4.1.2",
+		"cli-spinners": "^2.6.1",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"figlet": "^1.5.2",
@@ -51,9 +52,9 @@
 		"immutable": "^4.0.0",
 		"js-yaml": "^4.1.0",
 		"jszip": "^3.7.1",
-		"log-symbols": "^5.1.0",
 		"monaco-editor": "^0.32.1",
 		"nest-commander": "^2.5.0",
+		"ora-classic": "^5.4.2",
 		"probot": "^12.2.2",
 		"qrcode": "^1.5.0",
 		"qs": "^6.10.3",
