--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
 		"@types/qrcode": "^1.4.2",
 		"@types/uuid": "^8.3.4",
 		"@typescript-eslint/eslint-plugin": "^5.27.1",
-		"@typescript-eslint/parser": "^5.27.1",
+		"@typescript-eslint/parser": "^5.24.0",
 		"autoprefixer": "^10.3.7",
 		"chai": "^4.3.4",
 		"cypress": "^8.6.0",
@@ -122,7 +122,7 @@
 		"tailwindcss": "^3.0.24",
 		"ts-jest": "27.1.4",
 		"ts-node": "^10.8.1",
-		"typescript": "4.7.3"
+		"typescript": "^4.7.3"
 	},
 	"husky": {
 		"hooks": {
