--- a/apps/bulldozer-cli/project.json
+++ b/apps/bulldozer-cli/project.json
@@ -17,6 +17,7 @@
 					"optimization": true,
 					"extractLicenses": true,
 					"inspect": false,
+					"generatePackageJson": true,
 					"fileReplacements": [
 						{
 							"replace": "apps/bulldozer-cli/src/environments/environment.ts",
@@ -48,7 +49,7 @@
 			"options": {
 				"commands": [
 					"nx build bulldozer-cli",
-					"node dist/apps/bulldozer-cli/main.js build-workspace {args.workspaceId}"
+					"node dist/apps/bulldozer-cli/main.js build-workspace {args.workspaceId} {args.outDir}"
 				],
 				"parallel": false,
 				"envFile": "apps/bulldozer-cli/.env"
@@ -59,7 +60,7 @@
 			"options": {
 				"commands": [
 					"nx build bulldozer-cli",
-					"node dist/apps/bulldozer-cli/main.js deploy-workspace {args.workspaceId}"
+					"node dist/apps/bulldozer-cli/main.js deploy-workspace {args.workspaceId} {args.outDir}"
 				],
 				"parallel": false,
 				"envFile": "apps/bulldozer-cli/.env"
@@ -124,7 +125,8 @@
 			"executor": "@nrwl/workspace:run-commands",
 			"options": {
 				"commands": [
-					"nx build bulldozer-cli",
+					"rm -rf dist/apps/bulldozer-cli/",
+					"ncc build apps/bulldozer-cli/src/main.ts --license licenses.txt --minify --out dist/apps/bulldozer-cli",
 					"node dist/apps/bulldozer-cli/main.js get-workspace {args.workspaceId}"
 				],
 				"parallel": false,
@@ -206,6 +208,19 @@
 				],
 				"parallel": false,
 				"envFile": "apps/bulldozer-cli/.env"
+			}
+		},
+		"publish-npm": {
+			"executor": "@nrwl/workspace:run-commands",
+			"options": {
+				"commands": [
+					"rm -rf dist/apps/bulldozer-cli/",
+					"ncc build apps/bulldozer-cli/src/main.ts --license licenses.txt --minify --out dist/apps/bulldozer-cli",
+					"cp apps/bulldozer-cli/package.json dist/apps/bulldozer-cli",
+					"npm publish dist/apps/bulldozer-cli"
+				],
+				"parallel": false,
+				"envFile": "apps/drill-cli/.env"
 			}
 		},
 		"lint": {
