--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"bs58": "^5.0.0",
 		"case": "^1.6.3",
 		"chalk": "^4.1.2",
+		"cli-spinners": "^2.6.1",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"figlet": "^1.5.2",
@@ -51,9 +52,9 @@
 		"immutable": "^4.0.0",
 		"js-yaml": "^4.1.0",
 		"jszip": "^3.7.1",
-		"log-symbols": "^5.1.0",
 		"monaco-editor": "^0.32.1",
 		"nest-commander": "^2.5.0",
+		"ora-classic": "^5.4.2",
 		"probot": "^12.2.2",
 		"qrcode": "^1.5.0",
 		"qs": "^6.10.3",
@@ -97,7 +98,7 @@
 		"@types/qrcode": "^1.4.2",
 		"@types/uuid": "^8.3.4",
 		"@typescript-eslint/eslint-plugin": "^5.27.1",
-		"@typescript-eslint/parser": "^5.27.1",
+		"@typescript-eslint/parser": "^5.24.0",
 		"autoprefixer": "^10.3.7",
 		"chai": "^4.3.4",
 		"cypress": "^8.6.0",
@@ -121,7 +122,7 @@
 		"tailwindcss": "^3.0.24",
 		"ts-jest": "27.1.4",
 		"ts-node": "^10.8.1",
-		"typescript": "4.7.3"
+		"typescript": "^4.7.3"
 	},
 	"husky": {
 		"hooks": {
