chore: missing dependencies added

--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
 		"@types/uuid": "^8.3.4",
 		"@typescript-eslint/eslint-plugin": "^5.27.1",
 		"@typescript-eslint/parser": "^5.24.0",
+		"@vercel/ncc": "^0.34.0",
 		"autoprefixer": "^10.3.7",
 		"chai": "^4.3.4",
 		"cypress": "^8.6.0",
